--- a/SMS_Web/SMS_Web.csproj
+++ b/SMS_Web/SMS_Web.csproj
@@ -342,6 +342,7 @@
     <Compile Include="Controllers\StaffHandling\StaffAttendanceAdjustmentController.cs" />
     <Compile Include="Controllers\StaffHandling\StaffHolidayController.cs" />
     <Compile Include="Controllers\StaffHandling\StaffMiscWithdrawController.cs" />
+    <Compile Include="Controllers\StoreManagement\VendorController.cs" />
     <Compile Include="Controllers\SystemConfiguration\FeeConfigurationController.cs" />
     <Compile Include="Controllers\FeeCollection\IssueChalanController.cs" />
     <Compile Include="Controllers\FeeCollection\ProceedMonthController.cs" />
@@ -5824,6 +5825,7 @@
     <Content Include="Views\PettyCash\JournalVoucher.cshtml" />
     <Content Include="Views\PettyCashAccount\Index.cshtml" />
     <Content Include="Views\PettyCashReport\ViewReport.cshtml" />
+    <Content Include="Views\Vendor\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
