--- a/SMS_Web/SMS_Web.csproj
+++ b/SMS_Web/SMS_Web.csproj
@@ -342,8 +342,10 @@
     <Compile Include="Controllers\StaffHandling\StaffAttendanceAdjustmentController.cs" />
     <Compile Include="Controllers\StaffHandling\StaffHolidayController.cs" />
     <Compile Include="Controllers\StaffHandling\StaffMiscWithdrawController.cs" />
-    <Compile Include="Controllers\StoreManagement\ItemPurchaseController.cs" />
     <Compile Include="Controllers\StoreManagement\ItemController.cs" />
+    <Compile Include="Controllers\StoreManagement\ItemReturnController.cs" />
+    <Compile Include="Controllers\StoreManagement\ItemIssuanceController.cs" />
+    <Compile Include="Controllers\StoreManagement\ItemPurchaseController.cs" />
     <Compile Include="Controllers\StoreManagement\VendorController.cs" />
     <Compile Include="Controllers\SystemConfiguration\FeeConfigurationController.cs" />
     <Compile Include="Controllers\FeeCollection\IssueChalanController.cs" />
@@ -5827,10 +5829,14 @@
     <Content Include="Views\PettyCash\JournalVoucher.cshtml" />
     <Content Include="Views\PettyCashAccount\Index.cshtml" />
     <Content Include="Views\PettyCashReport\ViewReport.cshtml" />
-    <Content Include="Views\Vendor\Index.cshtml" />
     <Content Include="Views\Item\Index.cshtml" />
     <Content Include="Views\ItemPurchase\Index.cshtml" />
     <Content Include="Views\ItemPurchase\Search.cshtml" />
+    <Content Include="Views\Vendor\Index.cshtml" />
+    <Content Include="Views\ItemIssuance\Index.cshtml" />
+    <Content Include="Views\ItemIssuance\Search.cshtml" />
+    <Content Include="Views\ItemReturn\Index.cshtml" />
+    <Content Include="Views\ItemReturn\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
